# TradingStrands

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  SPEC.md
examples/strategies/: turtle-trading.md
infra/: app.py
infra/stacks/: trading_stack.py
scripts/: setup_alpaca.py
src/trading_strands/: __init__.py  app.py
src/trading_strands/auditor/: reconciler.py
src/trading_strands/broker/: __init__.py  alpaca.py  interface.py  types.py
src/trading_strands/coordinator/: __init__.py  coordinator.py  types.py
src/trading_strands/dashboard/: api.py  auth.py  publisher.py  serve.py
src/trading_strands/dashboard/static/: index.html
src/trading_strands/dashboard/templates/: base.html  index.html  login.html
src/trading_strands/ir/: __init__.py  compiler.py  tta.py
src/trading_strands/ledger/: __init__.py  models.py
src/trading_strands/marketdata/: __init__.py  provider.py
src/trading_strands/orchestrator/: __init__.py  engine.py
src/trading_strands/risk/: __init__.py  killswitch.py  manager.py
src/trading_strands/strategies/: __init__.py  bot.py
src/trading_strands/whatif/: __init__.py  tracker.py
tests/: test_auditor.py  test_auth.py  test_compiler.py  test_coordinator.py  test_dashboard_api.py  test_e2e.py  test_integration.py  test_killswitch.py  test_ledger.py  test_orchestrator.py  test_publisher.py  test_risk.py  test_smoke.py  test_strategy_bot.py  test_tta.py  test_whatif.py
